@@ -308,6 +308,22 @@ o dd if=<infile> of=<outfile> [bs=<sectsize>] [count=<sectors>] [skip=<sectors>]
      brw-rw-rw-       0 ram0
     nsh> dd if=/dev/ram0 of=/dev/null
 
+o df
+
+  Show the state of each mounted volume
+
+  Example:
+
+  nsh> mount
+   /etc type romfs
+    /tmp type vfat
+  nsh> df
+    Block  Number
+    Size   Blocks     Used Available Mounted on
+      64        6        6         0 /etc
+     512      985        2       983 /tmp
+  nsh> 
+
 o echo [<string|$name> [<string|$name>...]]
 
   Copy the sequence of strings and expanded environment variables to
@@ -808,6 +824,7 @@ Command Dependencies on Configuration Settings
   cd         !CONFIG_DISABLE_ENVIRON && CONFIG_NFILE_DESCRIPTORS > 0
   cp         CONFIG_NFILE_DESCRIPTORS > 0
   dd         CONFIG_NFILE_DESCRIPTORS > 0
+  df         !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS > 0 && CONFIG_FS_READABLE (see note 3)
   echo       --
   exec       --
   exit       --
@@ -858,18 +875,19 @@ settings.  All of these settings make the configuration of NSH potentially compl
 also allow it to squeeze into very small memory footprints.
 
   CONFIG_NSH_DISABLE_CAT,      CONFIG_NSH_DISABLE_CD,       CONFIG_NSH_DISABLE_CP,
-  CONFIG_NSH_DISABLE_DD,       CONFIG_NSH_DISABLE_ECHO,     CONFIG_NSH_DISABLE_EXEC,
-  CONFIG_NSH_DISABLE_EXIT,     CONFIG_NSH_DISABLE_FREE,     CONFIG_NSH_DISABLE_GET,
-  CONFIG_NSH_DISABLE_HELP,     CONFIG_NSH_DISABLE_IFCONFIG, CONFIG_NSH_DISABLE_KILL,
-  CONFIG_NSH_DISABLE_LOSETUP,  CONFIG_NSH_DISABLE_LS,       CONFIG_NSH_DISABLE_MB,
-  CONFIG_NSH_DISABLE_MKDIR,    CONFIG_NSH_DISABLE_MKFATFS,  CONFIG_NSH_DISABLE_MKFIFO,
-  CONFIG_NSH_DISABLE_MKRD,     CONFIG_NSH_DISABLE_MH,       CONFIG_NSH_DISABLE_MOUNT,
-  CONFIG_NSH_DISABLE_MW,       CONFIG_NSH_DISABLE_MV,       CONFIG_NSH_DISABLE_NFSMOUNT,
-  CONFIG_NSH_DISABLE_PS,       CONFIG_NSH_DISABLE_PING,     CONFIG_NSH_DISABLE_PUT,
-  CONFIG_NSH_DISABLE_PWD,      CONFIG_NSH_DISABLE_RM,       CONFIG_NSH_DISABLE_RMDIR,
-  CONFIG_NSH_DISABLE_SET,      CONFIG_NSH_DISABLE_SH,       CONFIG_NSH_DISABLE_SLEEP,
-  CONFIG_NSH_DISABLE_TEST,     CONFIG_NSH_DISABLE_UMOUNT,   CONFIG_NSH_DISABLE_UNSET,
-  CONFIG_NSH_DISABLE_USLEEP,   CONFIG_NSH_DISABLE_WGET,     CONFIG_NSH_DISABLE_XD
+  CONFIG_NSH_DISABLE_DD,       CONFIG_NSH_DISABLE_DF,       CONFIG_NSH_DISABLE_ECHO,
+  CONFIG_NSH_DISABLE_EXEC,     CONFIG_NSH_DISABLE_EXIT,     CONFIG_NSH_DISABLE_FREE,
+  CONFIG_NSH_DISABLE_GET,      CONFIG_NSH_DISABLE_HELP,     CONFIG_NSH_DISABLE_IFCONFIG,
+  CONFIG_NSH_DISABLE_KILL,     CONFIG_NSH_DISABLE_LOSETUP,  CONFIG_NSH_DISABLE_LS,
+  CONFIG_NSH_DISABLE_MB,       CONFIG_NSH_DISABLE_MKDIR,    CONFIG_NSH_DISABLE_MKFATFS,
+  CONFIG_NSH_DISABLE_MKFIFO,   CONFIG_NSH_DISABLE_MKRD,     CONFIG_NSH_DISABLE_MH,
+  CONFIG_NSH_DISABLE_MOUNT,    CONFIG_NSH_DISABLE_MW,       CONFIG_NSH_DISABLE_MV,
+  CONFIG_NSH_DISABLE_NFSMOUNT, CONFIG_NSH_DISABLE_PS,       CONFIG_NSH_DISABLE_PING,
+  CONFIG_NSH_DISABLE_PUT,      CONFIG_NSH_DISABLE_PWD,      CONFIG_NSH_DISABLE_RM,
+  CONFIG_NSH_DISABLE_RMDIR,    CONFIG_NSH_DISABLE_SET,      CONFIG_NSH_DISABLE_SH,
+  CONFIG_NSH_DISABLE_SLEEP,    CONFIG_NSH_DISABLE_TEST,     CONFIG_NSH_DISABLE_UMOUNT,
+  CONFIG_NSH_DISABLE_UNSET,    CONFIG_NSH_DISABLE_USLEEP,   CONFIG_NSH_DISABLE_WGET,
+  CONFIG_NSH_DISABLE_XD
 
 NSH-Specific Configuration Settings
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
